tests/snapshots/full-song.md.snap
---
source: tests/examples.rs
expression: events
---
[
    MidiEvent {
        time: 0.0,
        duration: 1.0,
        channel: 1,
        note: "g3",
        velocity: 100,
    },
    MidiEvent {
        time: 0.0,
        duration: 1.3333333333333333,
        channel: 1,
        note: "e3",
        velocity: 100,
    },
    MidiEvent {
        time: 0.0,
        duration: 4.0,
        channel: 1,
        note: "c3",
        velocity: 100,
    },
    MidiEvent {
        time: 0.0,
        duration: 0.5,
        channel: 10,
        note: "kick",
        velocity: 100,
    },
    MidiEvent {
        time: 0.5,
        duration: 0.5,
        channel: 10,
        note: "hi-hat",
        velocity: 100,
    },
    MidiEvent {
        time: 1.0,
        duration: 0.5,
        channel: 10,
        note: "kick",
        velocity: 100,
    },
    MidiEvent {
        time: 1.0,
        duration: 0.16666666666666666,
        channel: 10,
        note: "snare",
        velocity: 100,
    },
    MidiEvent {
        time: 1.1666666666666667,
        duration: 0.16666666666666666,
        channel: 10,
        note: "snare",
        velocity: 100,
    },
    MidiEvent {
        time: 1.3333333333333333,
        duration: 1.3333333333333333,
        channel: 1,
        note: "e3",
        velocity: 100,
    },
    MidiEvent {
        time: 1.3333333333333333,
        duration: 0.16666666666666666,
        channel: 10,
        note: "snare",
        velocity: 100,
    },
    MidiEvent {
        time: 1.5,
        duration: 0.5,
        channel: 10,
        note: "hi-hat",
        velocity: 100,
    },
    MidiEvent {
        time: 2.0,
        duration: 1.0,
        channel: 1,
        note: "g3",
        velocity: 100,
    },
    MidiEvent {
        time: 2.0,
        duration: 0.5,
        channel: 10,
        note: "kick",
        velocity: 100,
    },
    MidiEvent {
        time: 2.5,
        duration: 0.5,
        channel: 10,
        note: "hi-hat",
        velocity: 100,
    },
    MidiEvent {
        time: 2.6666666666666665,
        duration: 1.3333333333333333,
        channel: 1,
        note: "e3",
        velocity: 100,
    },
    MidiEvent {
        time: 3.0,
        duration: 0.5,
        channel: 10,
        note: "kick",
        velocity: 100,
    },
    MidiEvent {
        time: 3.0,
        duration: 0.5,
        channel: 10,
        note: "snare",
        velocity: 100,
    },
    MidiEvent {
        time: 3.5,
        duration: 0.5,
        channel: 10,
        note: "hi-hat",
        velocity: 100,
    },
    MidiEvent {
        time: 4.0,
        duration: 5.333333333333333,
        channel: 1,
        note: "c3",
        velocity: 100,
    },
    MidiEvent {
        time: 8.0,
        duration: 1.3333333333333333,
        channel: 1,
        note: "g3",
        velocity: 100,
    },
    MidiEvent {
        time: 9.333333333333334,
        duration: 1.3333333333333333,
        channel: 1,
        note: "e3",
        velocity: 100,
    },
    MidiEvent {
        time: 10.666666666666666,
        duration: 1.3333333333333333,
        channel: 1,
        note: "c3",
        velocity: 100,
    },
]
