tests/snapshots/invalid-frontmatter.loom.snap
---
source: tests/error_test.rs
expression: error_trace
---
loom::parser::frontmatter

  × YAML Frontmatter error
   ╭─[input:6:1]
 5 │ ---
 6 │ 
   · ▲
   · ╰── YAML content
 7 │ # Track: 1
   ╰────
  help: Invalid Frontmatter YAML
