tests/snapshots/invalid-loop-range-format.loom.snap
---
source: tests/error_test.rs
expression: error_trace
---
loom::parser::validation

  × Validation error: Invalid loop_range format. Expected 'start..end' (e.g. '0..1'), got '1 ~ 1'
   ╭─[input:1:1]
 1 │ ---
   · ─┬─
   ·  ╰── Invalid value
 2 │ loop: true
   ╰────
  help: Example: loop_range: 0..4
