tests/snapshots/invalid-loop-range.loom.snap
---
source: tests/error_test.rs
expression: error_trace
---
loom::parser::validation

  × Validation error: loop_range start must be >= 1 (1-based), got 0
   ╭─[input:1:1]
 1 │ ---
   · ─┬─
   ·  ╰── Invalid value
 2 │ loop: true
   ╰────
  help: Example: loop_range: "1 ~ 4"
